# quiche

./: .gitignore  .gitlab-ci.yml  .gitmodules  .semgrepignore  .travis.yml  AGENTS.md  CNAME  CODEOWNERS  COPYING  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  README.rst  RELEASE_NOTES.md  RELEASING.md  TODO.rst  catalog-info.yaml  cfsetup.yaml  cliff.toml  clippy.toml  crates.js  help.html  release.sh  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  source-files.js  src-files.js
apps/: Cargo.toml  run_endpoint.sh
apps/src/: args.rs  client.rs  cmsg.rs  common.rs  lib.rs  recvfrom.rs  sendto.rs
buffer-pool/: Cargo.toml
buffer-pool/src/: buffer.rs  lib.rs  raw_pool_buf_io.rs
datagram-socket/: AGENTS.md  Cargo.toml
datagram-socket/src/: buffer.rs  datagram.rs  lib.rs  mmsg.rs  shutdown.rs  socket_stats.rs
dgram/: Cargo.toml
dgram/src/: lib.rs  socket_setup.rs  sync.rs  syscalls.rs  tokio.rs
examples/: CMakeLists.txt  Dockerfile  Makefile  README.md  cert-big.crt  cert.key  client.c  client.rs  csr.exp  gen-certs.sh  http3-client.c  http3-client.rs  http3-server.c  http3-server.rs  qpack-decode.rs  qpack-encode.rs  rootca.crt  rootca.exp  server.c  server.rs
fuzz/: Cargo.toml  Dockerfile  README.md  cert.crt  cert.key
fuzz/src/: lib.rs  packet_recv_client.rs  packet_recv_server.rs  packets_afterhs_server.rs  packets_posths_server.rs  packets_recv_server.rs  qpack_decode.rs
h3/: Cargo.toml
h3/examples/: http3-client.rs  http3-server.rs  qpack-decode.rs  qpack-encode.rs
h3/src/: frame.rs  lib.rs  stream.rs
h3i/: AGENTS.md  Cargo.toml  README.md  all.html  constant.HTTP3_CONTROL_STREAM_TYPE_ID.html  constant.HTTP3_PUSH_STREAM_TYPE_ID.html  constant.QPACK_DECODER_STREAM_TYPE_ID.html  constant.QPACK_ENCODER_STREAM_TYPE_ID.html  index.html  sidebar-items.js
h3i/actions/: index.html
h3i/client/: enum.ClientError.html  fn.build_quiche_connection.html  index.html  sidebar-items.js
h3i/config/: index.html  struct.Config.html
h3i/examples/: content_length_mismatch.rs  stream_limit.rs
h3i/frame/: enum.H3iFrame.html  index.html  sidebar-items.js  struct.CloseTriggerFrame.html  struct.EnrichedHeaders.html  struct.ResetStream.html  struct.SerializableHeader.html  struct.SerializableQFrame.html  type.BoxError.html  type.HeaderMap.html
h3i/frame_parser/: enum.FrameParseResult.html  enum.InterruptCause.html  index.html  sidebar-items.js
h3i/prompts/: index.html  sidebar-items.js
h3i/recordreplay/: index.html  sidebar-items.js
h3i/src/: config.rs  frame.rs  frame_parser.rs  lib.rs  main.rs
netlog/: Cargo.toml  README.md  all.html  enum.Event.html  fn.parse_event.html  fn.read_netlog_constants.html  fn.read_netlog_record.html  index.html  sidebar-items.js  struct.EventHeader.html  struct.EventSource.html  struct.SourceDependency.html
netlog/constants/: index.html  sidebar-items.js  struct.ClientInfo.html  struct.Constants.html  struct.ConstantsLine.html
netlog/h2/: constant.H2_DEFAULT_WINDOW_SIZE.html  constant.H2_RECV_SETTING_PATTERN.html  constant.H2_SEND_SETTINGS_PATTERN.html  enum.Event.html  fn.parse_event.html  index.html  sidebar-items.js  struct.Htt2SessionStalledMaxStreamsEvent.html  struct.Htt2SessionStalledMaxStreamsParams.html  struct.Http2SessionCloseEvent.html  struct.Http2SessionCloseParams.html  struct.Http2SessionEvent.html  struct.Http2SessionInitializedEvent.html  struct.Http2SessionInitializedParams.html  struct.Http2SessionParams.html  struct.Http2SessionPingEvent.html  struct.Http2SessionPingParams.html  struct.Http2SessionRecvDataEvent.html  struct.Http2SessionRecvDataParams.html  struct.Http2SessionRecvGoawayEvent.html  struct.Http2SessionRecvGoawayParams.html  struct.Http2SessionRecvHeadersEvent.html  struct.Http2SessionRecvHeadersParams.html  struct.Http2SessionRecvRstStreamEvent.html  struct.Http2SessionRecvRstStreamParams.html  struct.Http2SessionRecvSettingEvent.html  struct.Http2SessionRecvSettingParams.html  (+25 more)
octets/: Cargo.toml  all.html  constant.MAX_VAR_INT.html  fn.huffman_encoding_len.html  fn.varint_len.html  fn.varint_parse_len.html  index.html  sidebar-items.js  struct.BufferTooShortError.html  struct.Octets.html  struct.OctetsMut.html  type.Result.html
qlog/: .gitignore  AGENTS.md  Cargo.toml  README.md  all.html  constant.QLOGFILESEQ_URI.html  constant.QLOGFILE_URI.html  constant.QLOG_VERSION.html  constant.SQLOG_EXT.html  constant.SQLOG_GZ_EXT.html  constant.SQLOG_ZST_EXT.html  enum.Error.html  enum.ImportanceLogLevel.html  enum.TimeFormat.html  enum.TokenType.html  enum.VantagePointType.html  index.html  sidebar-items.js  struct.CommonFields.html  struct.Configuration.html  struct.HexSlice.html  struct.Qlog.html  struct.QlogSeq.html  struct.ReferenceTime.html  struct.Token.html  struct.Trace.html  struct.TraceSeq.html  struct.VantagePoint.html  type.Bytes.html  type.Result.html  type.StatelessResetToken.html
qlog-dancer/: AGENTS.md  Cargo.toml  README.md  index.html  qlog-dancer-ui.js  qlog-dancer.css
quiche/: AGENTS.md  Cargo.toml  all.html  constant.MAX_ACK_DELAY_EXPONENT.html  constant.MAX_CONN_ID_LEN.html  constant.MIN_CLIENT_INITIAL_LEN.html  constant.PROTOCOL_VERSION.html  enum.CongestionControlAlgorithm.html  enum.Error.html  enum.PathEvent.html  enum.QlogLevel.html  enum.Shutdown.html  enum.StartupExitReason.html  enum.TxBufferTrackingState.html  enum.Type.html  enum.WireErrorCode.html  fn.accept.html  fn.accept_with_buf_factory.html  fn.accept_with_retry.html  fn.connect.html  fn.connect_with_buffer_factory.html  fn.connect_with_dcid.html  fn.connect_with_dcid_and_buffer_factory.html  fn.negotiate_version.html  fn.retry.html  fn.version_is_supported.html  index.html  sidebar-items.js  struct.Config.html  struct.Connection.html  struct.ConnectionError.html  struct.ConnectionId.html  struct.Header.html  struct.PathStats.html  struct.RecvInfo.html  struct.RetryConnectionIds.html  struct.SendInfo.html  struct.SocketAddrIter.html  struct.StartupExit.html  struct.Stats.html  (+8 more)
task-killswitch/: Cargo.toml
tokio-quiche/: AGENTS.md  Cargo.toml  README.md  build.rs
(+12446 files in other folders)
