[workspace]
members = [
  "apps",
  "buffer-pool",
  "datagram-socket",
  "h3i",
  "octets",
  "qlog",
  "quiche",
  "task-killswitch",
  "tokio-quiche",
]
exclude = ["fuzz", "tools/http3_test"]
resolver = "2"

[workspace.package]
edition = "2021"
repository = "https://github.com/cloudflare/quiche"
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["quic", "http3"]
categories = ["network-programming"]

[workspace.metadata.release]
pre-release-commit-message = "{{crate_name}}: release {{version}}"
consolidate-commits = false
tag-prefix = "{{crate_name}}-"
tag-name = "{{prefix}}{{version}}"
tag-message = "{{crate_name}} {{version}}"
publish = false

[workspace.dependencies]
boring = { version = "4.3" }
buffer-pool = { version = "0.1.0", path = "./buffer-pool" }
crossbeam = { version = "0.8.1", default-features = false }
datagram-socket = { version = "0.1.0", path = "./datagram-socket" }
env_logger = "0.10"
foundations = { version = "4", default-features = false }
futures = { version = "0.3" }
futures-util = { version = "0.3", default-features = false }
h3i = { version = "0.4", path = "./h3i" }
ipnetwork = { version = "0.20" }
libc = { version = "0.2.76", default-features = false }
log = { version = "0.4.20" }
mio = { version = "0.8" }
nix = { version = "0.26.2" }
octets = { version = "0.3.0", path = "./octets" }
parking_lot = { version = "0.12.1", default-features = false }
pin-project = { version = "1.0.12" }
qlog = { version = "0.15.1", path = "./qlog" }
quiche = { version = "0.23.4", path = "./quiche" }
rand = { version = "0.8" }
regex = { version = "1.4.2" }
ring = { version = "0.17.8" }
serde = { version = "1" }
serde_json = { version = "1" }
serde_with = { version = "3.3" }
slog-scope = { version = "4.0" }
slog-stdlog = { version = "4.1.1" }
smallvec = { version = "1.10", default-features = false }
task-killswitch = { version = "0.1.0", path = "./task-killswitch" }
thiserror = { version = "1" }
tokio = { version = "1.29", default-features = false }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.13" }
triomphe = { version = "0.1" }
url = { version = "2" }

[profile.bench]
debug = true

[profile.release]
debug = true
