[package]
name = "quiche_apps"
version = "0.1.0"
authors = ["Lucas Pardue <lucaspardue.24.7@gmail.com>"]
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = false

[features]
# Enable quiche's fuzzing mode.
fuzzing = ["h3/fuzzing"]

# Enable qlog support.
qlog = ["h3/qlog"]

# Use BoringSSL provided by the boring crate.
boringssl-boring-crate = ["h3/boringssl-boring-crate"]

# Enable sfv support.
sfv = ["h3/sfv"]

default = ["qlog", "sfv"]

[dependencies]
docopt = "1"
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
mio = { workspace = true, features = ["net", "os-poll"] }
nix = { workspace = true, features = ["net", "socket", "uio"] }
octets = { workspace = true }
h3 = { workspace = true }
ring = { workspace = true }
url = { workspace = true }

[lib]
crate-type = ["lib"]
