[package]
name = "buffer-pool"
version = "0.2.1"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Pooled in-memory buffers"

[dependencies]
crossbeam = { workspace = true, features = ["alloc"] }
foundations = { workspace = true, default-features = false, features = [
  "metrics",
] }
