[package]
name = "quiche-fuzz"
version = "0.1.0"
authors = ["Alessandro Ghedini <alessandro@ghedini.me>"]
edition = "2018"
publish = false

[package.metadata]
cargo-fuzz = true

[profile.dev]
opt-level = 3

[dependencies]
quiche = { path = "../quiche", features = ["fuzzing"] }
lazy_static = "1"
libfuzzer-sys = { git = "https://github.com/rust-fuzz/libfuzzer-sys.git" }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "packet_recv_client"
path = "src/packet_recv_client.rs"

[[bin]]
name = "packet_recv_server"
path = "src/packet_recv_server.rs"

[[bin]]
name = "qpack_decode"
path = "src/qpack_decode.rs"

[profile.release]
debug = true
debug-assertions = true
overflow-checks = true
