[package]
name = "h3i"
version = "0.4.1"
authors = [
  "Lucas Pardue <lucas@lucaspardue.com>",
  "Evan Rittenhouse <evanrittenhouse@gmail.com>",
]
description = "Low-level HTTP/3 debugging and testing"
rust-version = "1.81"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[features]
default = ["sync"]

sync = ["dep:quiche"]
async = ["dep:tokio-quiche", "dep:async-trait", "dep:buffer-pool", "dep:tokio"]

[dependencies]
clap = "3"
env_logger = { workspace = true }
inquire = "0.6.2"
log = { workspace = true, features = ["std"] }
mio = { workspace = true, features = ["net", "os-poll"] }
multimap = "0.10"
octets = { version = "0.3.0" }
qlog = { version = "0.15" }
# TODO: this should be optional and gated to a `sync` feature
quiche = { version = "0.23", features = ["internal", "qlog"], optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["macros", "std"] }
smallvec = { workspace = true }
url = { workspace = true }

# Async dependencies
async-trait = { version = "0.1.61" , optional = true}
buffer-pool = { workspace = true,  optional = true }
tokio = { version = "1.29", features = ["full", "test-util"], optional = true }
tokio-quiche = { workspace = true, features = ["capture_keylogs", "quiche_internal"], optional = true }
