[package]
name = "h3i"
version = "0.5.0"
authors = [
  "Lucas Pardue <lucas@lucaspardue.com>",
  "Evan Rittenhouse <evanrittenhouse@gmail.com>",
]
description = "Low-level HTTP/3 debugging and testing"
rust-version = "1.83"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[features]
async = ["dep:buffer-pool", "dep:tokio", "dep:tokio-quiche"]

[dependencies]
clap = "4"
env_logger = { workspace = true }
inquire = "0.9.1"
log = { workspace = true, features = ["std"] }
mio = { workspace = true, features = ["net", "os-poll"] }
multimap = "0.10"
octets = { workspace = true }
qlog = { workspace = true }
quiche = { features = ["internal", "qlog"], workspace = true }
ring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["macros", "std"] }
smallvec = { workspace = true }
url = { workspace = true }

# Dependencies for async client
buffer-pool = { optional = true, workspace = true }
tokio = { version = "1.44", features = ["net", "sync", "time"], optional = true }
tokio-quiche = { features = ["capture_keylogs", "quiche_internal"], optional = true, workspace = true }
