[package]
name = "octets"
version = "0.3.4"
authors = ["Alessandro Ghedini <alessandro@ghedini.me>"]
description = "Zero-copy abstraction for parsing and constructing network packets"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[features]
# Build the Huffman encoding support as defined by HPACK (RFC7541).
huffman_hpack = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(test_invalid_len_compilation_fail)',
] }
