[package]
name = "qlog"
version = "0.16.0"
description = "qlog data model for QUIC and HTTP/3"
repository = { workspace = true }
authors = ["Lucas Pardue <lucas@lucaspardue.com>"]
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
readme = "README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with = { workspace = true, features = ["macros"] }
smallvec = { workspace = true, features = ["serde"] }
