[package]
name = "task-killswitch"
version = "0.1.0"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
once_cell = { workspace = true, features = ["critical-section"] }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
futures-util = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = ["macros", "time"] }
