[package]
name = "task-killswitch"
version = "0.1.0"
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Abort all tokio tasks at once"

[features]
metrics = ["dep:foundations"]

[dependencies]
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
foundations = { workspace = true, optional = true, features = ["metrics"] }

[dev-dependencies]
futures-util = { workspace = true, features = ["alloc"] }
tokio = { workspace = true, features = ["macros", "time"] }
